Solución del error de registro